force-app/main/default/objects/Position__c/Position__c.object-meta.xml
<CustomObject>
    <description>The position for which a company is trying to hire an applicant</description>
    <label>Position</label>
    <nameField>
        <displayFormat>PSN-{00000}</displayFormat>
        <label>Position</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>