force-app/main/default/objects/Position__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>A placeholder for the company name, to be used in matching to an account</description>
    <inlineHelpText>A placeholder for the company name, to be used in matching to an accou</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>