force-app/main/default/objects/Position__c/fields/Created_by_Jooble__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Jooble__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator that the position was created through the integration with Jooble</description>
    <inlineHelpText>Indicator that the position was created through the integration with Jooble</inlineHelpText>
    <label>Created by Jooble</label>
    <type>Checkbox</type>
</CustomField>