force-app/main/default/objects/Position__c/fields/External_System_Id__c.field-meta.xml
<CustomField>
    <fullName>External_System_Id__c</fullName>
    <description>Unique Id for external data system</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Id for external data system</inlineHelpText>
    <label>External System Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>