force-app/main/default/objects/Position__c/fields/Geographic_Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Job_Location__c</fullName>
    <description>The geographic location where the jobsite is located</description>
    <inlineHelpText>The geographic location where the jobsite is located</inlineHelpText>
    <label>Geographic Job Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>