force-app/main/default/objects/Position__c/fields/Job_Address__c.field-meta.xml
<CustomField>
    <fullName>Job_Address__c</fullName>
    <description>The address of the job site, if different from the company&apos;s address</description>
    <inlineHelpText>The address of the job site, if different from the company&apos;s address</inlineHelpText>
    <label>Job Address</label>
    <type>Address</type>
</CustomField>