force-app/main/default/objects/Position__c/fields/Position_Link__c.field-meta.xml
<CustomField>
    <fullName>Position_Link__c</fullName>
    <description>The URL from which the job posting came, if it came from the Web</description>
    <inlineHelpText>The URL from which the job posting came, if it came from the Web</inlineHelpText>
    <label>Position Link</label>
    <type>Url</type>
</CustomField>