force-app/main/default/objects/Position__c/fields/Position_Status__c.field-meta.xml
<CustomField>
    <fullName>Position_Status__c</fullName>
    <description>The indicator of whether the position is open for hiring or filled</description>
    <inlineHelpText>The indicator of whether the position is open for hiring or filled</inlineHelpText>
    <label>Position Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Filled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>