force-app/main/default/objects/Position__c/fields/Reported_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Reported_Last_Updated__c</fullName>
    <description>The reported last updated date and time of the position (as opposed to the Salesforce audit field Last Modified Date)</description>
    <inlineHelpText>The reported last updated date and time of the position (as opposed to the Salesforce audit field Last Modified Date)</inlineHelpText>
    <label>Reported Last Updated</label>
    <type>DateTime</type>
</CustomField>