force-app/main/default/objects/Position__c/fields/Salary_High__c.field-meta.xml
<CustomField>
    <fullName>Salary_High__c</fullName>
    <description>The value of the highest salary allowed for the position</description>
    <inlineHelpText>The value of the highest salary allowed for the position</inlineHelpText>
    <label>Salary High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>