force-app/main/default/objects/Position__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The source of the position announcement</description>
    <inlineHelpText>The source of the position announcement</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>