force-app/main/default/objects/Position__c/fields/Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Type__c</fullName>
    <description>The type of employee, in terms of regular employee or contractor</description>
    <inlineHelpText>The type of employee, in terms of regular employee or contractor</inlineHelpText>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full-time Salaried</fullName>
                <default>true</default>
                <label>Full-time Salaried</label>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>