force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Geographic_Job_Location__c</columns>
    <columns>Position_Description__c</columns>
    <columns>Salary__c</columns>
    <columns>Source__c</columns>
    <columns>Time_Type__c</columns>
    <columns>Position_Link__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Reported_Last_Updated__c</columns>
    <columns>External_System_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>